# Analyse_images_et_region_growing

./: .gitignore  README.md
tp0/: .swp  .tp0.cpp.swp  CMakeLists.txt  Makefile  notes.md
tp0/TP0/: Makefile  tp0.cpp
tp0/TP0/ressources/: Histogramme du cameraman surexposé.txt  Histogramme du cameraman égalisé.txt  Histogramme du cameraman étiré.txt
tp0/ressources/: Histogramme cumulé de Lena.txt  Histogramme de Lena.txt
tp1/: .gitignore  CMakeLists.txt  GermsPositioning.hpp  GrowAndMerge.hpp  ImageProcessor.hpp  ImageUtil.hpp  Makefile  README.md  SegmentedRegion.hpp  main.cpp  tp1.cpp
